Purging CSS blog & quick fixes (#2)
* overflow hidden for main content

* make code block overflow auto

* ummm...

* remove overflow hidden from layout

* configure purge css

* make purge false

* add purge css blog assets

* 1st draft

* reduced content width

* remove scrollbars

* more widths fixed

* fixing codeblock scrolling on mobile devices

* wrap code block pre element

* pre parent width

* fixed float issues

* Draft 2

* fix mobile menu width

* fix purged pre styles

--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -2,6 +2,16 @@
 
 body {
   @apply bg-dark-1;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+pre {
+  white-space: pre-wrap;
 }
 
 @tailwind components;
